src/metrics/snapshots/big_code_analysis__metrics__npm__tests__kotlin_override_fun_counts.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_methods": 3.0,
  "interface_methods": 0.0,
  "classes_average": 0.6666666666666666,
  "interfaces_average": null,
  "total": 2.0,
  "total_methods": 3.0,
  "average": 0.6666666666666666
}
