src/metrics/snapshots/big_code_analysis__metrics__npm__tests__mozjs_class_methods_count.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 4,
  "interfaces": 0,
  "class_methods": 4,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 4,
  "total_methods": 4,
  "coa": 1.0
}
