src/metrics/snapshots/big_code_analysis__metrics__npm__tests__php_interface_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0,
  "interfaces": 2,
  "class_methods": 0,
  "interface_methods": 2,
  "class_coa": 0.0,
  "interface_coa": 1.0,
  "total": 2,
  "total_methods": 2,
  "coa": 1.0
}
