src/metrics/snapshots/big_code_analysis__metrics__npm__tests__php_mixed_visibility_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 2,
  "interfaces": 0,
  "class_methods": 4,
  "interface_methods": 0,
  "class_coa": 0.5,
  "interface_coa": 0.0,
  "total": 2,
  "total_methods": 4,
  "coa": 0.5
}
