src/metrics/snapshots/big_code_analysis__metrics__npm__tests__php_no_explicit_visibility_method_excluded.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0.0,
  "interfaces": 0.0,
  "class_methods": 1.0,
  "interface_methods": 0.0,
  "classes_average": 0.0,
  "interfaces_average": null,
  "total": 0.0,
  "total_methods": 1.0,
  "average": 0.0
}
