src/metrics/snapshots/big_code_analysis__metrics__npm__tests__php_one_public_method.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1,
  "interfaces": 0,
  "class_methods": 1,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 1,
  "total_methods": 1,
  "coa": 1.0
}
