src/metrics/snapshots/big_code_analysis__metrics__npm__tests__python_async_method_counts.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_methods": 1.0,
  "interface_methods": 0.0,
  "classes_average": 1.0,
  "interfaces_average": 0.0,
  "total": 1.0,
  "total_methods": 1.0,
  "average": 1.0
}
