src/metrics/snapshots/big_code_analysis__metrics__npm__tests__python_dunder_methods_count.snap
---
source: src/metrics/npm.rs
assertion_line: 2253
expression: metric.npm
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_methods": 3.0,
  "interface_methods": 0.0,
  "classes_average": 1.0,
  "interfaces_average": null,
  "total": 3.0,
  "total_methods": 3.0,
  "average": 1.0
}
